# htaglib

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  cabal.project  htaglib.cabal
.github/workflows/: ci.yaml
Sound/: HTagLib.hs
Sound/HTagLib/: Getter.hs  Internal.hs  Setter.hs  Type.hs
audio-samples/: README.md  sample.flac
tests/: Getter.hs  Main.hs  Setter.hs  Util.hs
tests/Sound/HTagLib/: GetterSpec.hs  SetterSpec.hs
tests/Sound/HTagLib/Test/: Util.hs
