cabal-version:   1.18
name:            htaglib
version:         1.2.0
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.2
homepage:        https://github.com/mrkkrp/htaglib
bug-reports:     https://github.com/mrkkrp/htaglib/issues
synopsis:        Bindings to TagLib, audio meta-data library
description:     Bindings to TagLib, audio meta-data library.
category:        Sound, Foreign
build-type:      Simple
data-files:
    audio-samples/*.flac
    audio-samples/*.mp3

extra-doc-files:
    CHANGELOG.md
    README.md
    audio-samples/README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/htaglib.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Sound.HTagLib
    other-modules:
        Sound.HTagLib.Type
        Sound.HTagLib.Getter
        Sound.HTagLib.Setter
        Sound.HTagLib.Internal

    default-language: Haskell2010
    extra-libraries:  tag_c
    build-depends:
        base >=4.12 && <5.0,
        bytestring >=0.9 && <0.11,
        text >=1.0 && <1.3,
        transformers >=0.4 && <0.6

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:
        Sound.HTagLib.GetterSpec
        Sound.HTagLib.SetterSpec
        Sound.HTagLib.Test.Util

    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        directory >=1.2 && <1.4,
        filepath >=1.4 && <2.0,
        hspec >=2.0 && <3.0,
        htaglib -any

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
