cabal-version:   2.4
name:            htaglib
version:         1.2.1
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.4.7 ghc ==9.6.3 ghc ==9.8.1
homepage:        https://github.com/mrkkrp/htaglib
bug-reports:     https://github.com/mrkkrp/htaglib/issues
synopsis:        Bindings to TagLib, audio meta-data library
description:     Bindings to TagLib, audio meta-data library.
category:        Sound, Foreign
build-type:      Simple
data-files:
    audio-samples/*.flac
    audio-samples/*.mp3

extra-doc-files:
    CHANGELOG.md
    README.md
    audio-samples/README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/htaglib.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Sound.HTagLib
    other-modules:
        Sound.HTagLib.Type
        Sound.HTagLib.Getter
        Sound.HTagLib.Setter
        Sound.HTagLib.Internal

    default-language: GHC2021
    extra-libraries:  tag_c
    build-depends:
        base >=4.15 && <5,
        bytestring >=0.9 && <0.12,
        text >=1 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    hs-source-dirs:     tests
    other-modules:
        Sound.HTagLib.GetterSpec
        Sound.HTagLib.SetterSpec
        Sound.HTagLib.Test.Util

    default-language:   GHC2021
    build-depends:
        base >=4.15 && <5,
        directory >=1.2 && <1.4,
        filepath >=1.4 && <2,
        hspec >=2 && <3,
        htaglib

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
